--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,6 +88,16 @@ jobs:
         run: cd benchmarks && make riscv_mini_run_once
 
 
+  test:
+    name: fuzzing
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Kick the Tires on Fuzzing
+        run: cd fuzzing && make kick_the_tires
+
+
   # Sentinel job to simplify how we specify which checks need to pass in branch
   # protection and in Mergify
   #
