--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,7 @@ jobs:
         run: cd benchmarks && make riscv_mini_run_once
 
 
-  test:
+  fuzzing:
     name: fuzzing
     runs-on: ubuntu-20.04
     steps:
@@ -104,7 +104,7 @@ jobs:
   # When adding new jobs, please add them to `needs` below
   all_tests_passed:
     name: "all tests passed"
-    needs: [test, benchmarks]
+    needs: [test, benchmarks, fuzzing]
     runs-on: ubuntu-latest
     steps:
       - run: echo Success!
