--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,6 +94,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: install matplotlib
+        run: sudo apt-get install -y python3-matplotlib
       - name: Kick the Tires on Fuzzing
         run: cd fuzzing && make figure10 TIME_MIN=1 REPS=1
 
